[gd_scene load_steps=17 format=2]

[ext_resource path="res://enemies/Gay.png" type="Texture" id=1]
[ext_resource path="res://Bullets.tscn" type="PackedScene" id=2]
[ext_resource path="res://BigBoy.gd" type="Script" id=3]
[ext_resource path="res://PYA.tres" type="Animation" id=4]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.239216, 0.0392157, 0.945098, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 0.0156863, 0.0156863, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="Theme" id=10]
ProgressBar/colors/font_color = Color( 1, 1, 1, 1 )
ProgressBar/colors/font_color_shadow = Color( 0, 0, 0, 1 )
ProgressBar/fonts/font = null
ProgressBar/styles/bg = SubResource( 8 )
ProgressBar/styles/fg = SubResource( 9 )

[sub_resource type="CircleShape2D" id=2]
radius = 50.4402

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 400, 179.369 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 28.7285
height = 116.123

[sub_resource type="CircleShape2D" id=5]
radius = 53.0432

[sub_resource type="CapsuleShape2D" id=6]
radius = 22.9908
height = 132.446

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PJ_Check:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("PJ_Check:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "SuperPYA"
length = 0.55
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35, 0.55 ),
"transitions": PoolRealArray( 0.732043, 57.68, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.5 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.35, 0.55 ),
"transitions": PoolRealArray( 0.732043, 57.68, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 60 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PJ_Check:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.35, 0.55 ),
"transitions": PoolRealArray( 0.732043, 57.68, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.6 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PJ_Check:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.35, 0.55 ),
"transitions": PoolRealArray( 0.732043, 57.68, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 50 ), Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 29.1356, 15.2492 )

[node name="BigBoy" type="KinematicBody2D" groups=["Enemy"]]
position = Vector2( 254.271, 295.835 )
collision_layer = 16
collision_mask = 99
script = ExtResource( 3 )
ammo = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -73.5
margin_top = -123.5
margin_right = -73.5
margin_bottom = -123.5

[node name="ProgressBar" type="ProgressBar" parent="Control"]
margin_left = -20.0
margin_top = -30.0
margin_right = 165.0
margin_bottom = -8.0
theme = SubResource( 10 )
value = 100.0

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -9.51367, -76.1092 )
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
collision_mask = 3

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="PJ_Check" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="PJ_Check"]
position = Vector2( -2.37842, 54.7035 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PJ_Check"]
position = Vector2( -7.13525, -73.7309 )
shape = SubResource( 5 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.834284, 0 )
scale = Vector2( 0.632919, 1 )
rect = Rect2( -45, -100, 80, 240 )

[node name="FloorChecker" type="RayCast2D" parent="."]
modulate = Color( 0.172549, 0.0509804, 0.0509804, 1 )
position = Vector2( 0, 108.218 )
enabled = true
cast_to = Vector2( 0, 500 )
collision_mask = 2

[node name="FloorChecker2" type="RayCast2D" parent="."]
modulate = Color( 0.172549, 0.0509804, 0.0509804, 1 )
position = Vector2( 0, 108.218 )
enabled = true
cast_to = Vector2( 0, 35 )
collision_mask = 2

[node name="WallChecker" type="RayCast2D" parent="."]
modulate = Color( 0.290196, 0.0196078, 0.415686, 1 )
position = Vector2( 2.37842, 70.1631 )
enabled = true
cast_to = Vector2( 35.7649, 1.31036 )
collision_mask = 2

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2( -2.33533, 37.3647 )
shape = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/PYA = ExtResource( 4 )
anims/RESET = SubResource( 7 )

[node name="BodyChecker" type="RayCast2D" parent="."]
modulate = Color( 0.121569, 0.176471, 0.752941, 1 )
position = Vector2( -10.5089, -103.921 )
enabled = true
cast_to = Vector2( 7.81183, 200.363 )
collision_mask = 2

[node name="SuperPYA" type="AnimationPlayer" parent="."]
playback_speed = 0.5
anims/RESET = SubResource( 11 )
anims/SuperPYA = SubResource( 12 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -2.6826, 109.491 )
shape = SubResource( 13 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="area_entered" from="PJ_Check" to="." method="_on_PJ_Check_area_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_screen_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="SuperPYA" to="." method="_on_SuperPYA_animation_finished"]
